--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             timeout of 3 seconds.</h1>
 
         <div>
-            <input type="button" onclick="timeOutTest()" value="test timeout" />
-            <input type="button" onclick="clearTimeOutTest()" value="clear timeout" />
+            <input type="button" value="test timeout" />
+            <input type="button" value="clear timeout" />
         </div>
         <br>
         <h3 id="timeout_text"></h3>
