Adding timing event section

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             timeout of 3 seconds.</h1>
 
         <div>
-            <input type="button" value="test timeout" />
-            <input type="button" value="clear timeout" />
+            <input type="button" value="test timeout" onclick="timing()">
+            <input type="button" value="clear timeout" onclick="clear_timing()">
         </div>
         <br>
         <h3 id="timeout_text"></h3>
